cashin: fix complaints about policy header

--- a/html/cashin.html
+++ b/html/cashin.html
@@ -1,3 +1,6 @@
+<head>
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+</head>
 <style>
   body {
     font-family: Arial, sans-serif;
