add build version 8.25.0

--- a/html/cta.html
+++ b/html/cta.html
@@ -1,22 +1,75 @@
 <style>
   .cta {
-        border-radius: 10px;
-        border: none;
-        cursor: pointer;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+      sans-serif;
+    color: white;
+    line-height: 24px;
+    padding: 8px 16px;
+    width: fit-content;
+  }
+  .ios {
+    background-color: rgb(142, 142, 147);
+  }
+  .android {
+    background-color: rgb(50, 222, 133);
+  }
+  .title {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 500;
+  }
+  .subtitle {
+    margin: 0;
+    font-size: 12px;
   }
 </style>
 
 <br />
-<p align="center">
-  <a href="itms-services://?action=download-manifest&amp;url=https://github.com/zalopay-samples/test-wallets/raw/main/ios/manifest.plist">
-    <img src="https://img.shields.io/badge/-for%20iOS-gray?style=flat-square&logo=apple" height="60" class="cta" />
+<div align="center">
+  <a
+    href="itms-services://?action=download-manifest&amp;url=https://github.com/zalopay-samples/test-wallets/raw/main/ios/8.25.0/manifest-8.25.0.plist"
+    style="text-decoration: none"
+  >
+    <div class="cta ios">
+      <img
+        src="../images/icons/apple.svg"
+        width="32"
+        height="32"
+        style="margin-right: 8px"
+      />
+      <div>
+        <p class="title">8.25.0 Current</p>
+        <p class="subtitle">Latest Features</p>
+      </div>
+    </div>
   </a>
-</p>
-<p align="center">
+</div>
+<div align="center">
   <br />
-  <a href="https://github.com/zalopay-samples/test-wallets/raw/main/android/zalopay-7.20.0.apk">
-  <img src="https://img.shields.io/badge/-for%20Android-blue?style=flat-square&logo=android&logoColor=white" height="60" class="cta" />
+  <a
+    href="https://github.com/zalopay-samples/test-wallets/raw/main/android/ZaloPay_Android_8.25.0.apk"
+    style="text-decoration: none"
+  >
+    <div class="cta android">
+      <img
+        src="../images/icons/android.svg"
+        width="32"
+        height="32"
+        style="margin-right: 8px"
+      />
+      <div>
+        <p class="title">8.25.0 Current</p>
+        <p class="subtitle">Latest Features</p>
+      </div>
+    </div>
   </a>
-</p>
+</div>
 <br />
