--- a/html/cta.html
+++ b/html/cta.html
@@ -4,6 +4,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width: 100%;
   }
   .cta {
     border-radius: 10px;
@@ -29,12 +30,12 @@
     background-color: rgb(50, 222, 133);
   }
   .title {
-    margin: 0;
+    margin: 0 !important;
     font-size: 18px;
     font-weight: 500;
   }
   .subtitle {
-    margin: 0;
+    margin: 0 !important;
     font-size: 12px;
   }
 </style>
@@ -52,6 +53,7 @@
           width="32"
           height="32"
           style="margin-right: 8px"
+          alt="Android Logo"
         />
         <div>
           <p class="title">8.25.0 Current</p>
@@ -71,6 +73,7 @@
           width="32"
           height="32"
           style="margin-right: 8px"
+          alt="Android Logo"
         />
         <div>
           <p class="title">8.25.0 Current</p>
